[ADS-2739] Support concurrent mode in PutGreenplumRecord processor (#26)
[ADS-2668] Fix resource leak in GpfdistRecordProcessorProvider and error handling in PutGreenplumRecord (#25)